--- a/bboard/templates/bboard/index.html
+++ b/bboard/templates/bboard/index.html
@@ -8,10 +8,17 @@
 <body>
 
     <h1>Ads</h1>
+    <div>
+        <a href="/bboard/">Home</a>
+        {% for rubric in rubrics %}
+        <a href="/bboard/{{ rubric.pk }}">{{ rubric.name }}</a>
+        {% endfor %}
+    </div>
     {% for ad in ads %}
     <div>
         <h2>{{ ad.title }}</h2>
         <p>{{ ad.content }}</p>
+        <p><a href="/bboard/{{ ad.rubric.pk }}">{{ ad.rubric.name }}</a></p>
         <p>{{ ad.published|date:"d.m.Y H:i:s" }}</p>
     </div>
     {% endfor %}
