--- a/bboard/templates/bboard/index.html
+++ b/bboard/templates/bboard/index.html
@@ -9,16 +9,16 @@
 
     <h1>Ads</h1>
     <div>
-        <a href="/bboard/">Home</a>
+        <a href="{% url 'index' %}">Home</a>
         {% for rubric in rubrics %}
-        <a href="/bboard/{{ rubric.pk }}">{{ rubric.name }}</a>
+        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
         {% endfor %}
     </div>
     {% for ad in ads %}
     <div>
         <h2>{{ ad.title }}</h2>
         <p>{{ ad.content }}</p>
-        <p><a href="/bboard/{{ ad.rubric.pk }}">{{ ad.rubric.name }}</a></p>
+        <p><a href="{% url 'by_rubric' ad.rubric.pk %}">{{ ad.rubric.name }}</a></p>
         <p>{{ ad.published|date:"d.m.Y H:i:s" }}</p>
     </div>
     {% endfor %}
