--- a/bboard/templates/bboard/create.html
+++ b/bboard/templates/bboard/create.html
@@ -3,12 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ current_rubric.name }} - Bulletin Board</title>
+    <title>Create Ad - Bulletin Board</title>
 </head>
 <body>
 
-    <h1>Ads</h1>
-    <h2>Rubric: {{ current_rubric.name }}</h2>
+    <h1>Create Ad</h1>
     <div>
         <a href="{% url 'index' %}">Home</a>
         <a href="{% url 'add' %}">Create Ad</a>
@@ -16,13 +15,12 @@
         <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
         {% endfor %}
     </div>
-    {% for ad in ads %}
-    <div>
-        <h2>{{ ad.title }}</h2>
-        <p>{{ ad.content }}</p>
-        <p>{{ ad.published|date:"d.m.Y H:i:s" }}</p>
-    </div>
-    {% endfor %}
+
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Create">
+    </form>
     
 </body>
 </html>
