create and use basic template

--- a/bboard/templates/bboard/create.html
+++ b/bboard/templates/bboard/create.html
@@ -1,26 +1,15 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Create Ad - Bulletin Board</title>
-</head>
-<body>
+{% extends "layout/basic.html" %}
 
-    <h1>Create Ad</h1>
-    <div>
-        <a href="{% url 'index' %}">Home</a>
-        <a href="{% url 'add' %}">Create Ad</a>
-        {% for rubric in rubrics %}
-        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
-        {% endfor %}
-    </div>
+{% block title %}
+Create Ad
+{% endblock title %}
+
+{% block content %}
 
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Create">
     </form>
-    
-</body>
-</html>
+  
+{% endblock content %}
