--- a/bboard/templates/bboard/by_rubric.html
+++ b/bboard/templates/bboard/by_rubric.html
@@ -1,28 +1,17 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ current_rubric.name }} - Bulletin Board</title>
-</head>
-<body>
+{% extends "layout/basic.html" %}
 
-    <h1>Ads</h1>
-    <h2>Rubric: {{ current_rubric.name }}</h2>
-    <div>
-        <a href="{% url 'index' %}">Home</a>
-        <a href="{% url 'add' %}">Create Ad</a>
-        {% for rubric in rubrics %}
-        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
-        {% endfor %}
-    </div>
+{% block title %}
+    {{ current_rubric.name }}
+{% endblock title %}
+
+{% block content %}
+
     {% for ad in ads %}
-    <div>
-        <h2>{{ ad.title }}</h2>
-        <p>{{ ad.content }}</p>
-        <p>{{ ad.published|date:"d.m.Y H:i:s" }}</p>
-    </div>
+        <div>
+            <h2>{{ ad.title }}</h2>
+            <p>{{ ad.content }}</p>
+            <p>{{ ad.published|date:"d.m.Y H:i:s" }}</p>
+        </div>
     {% endfor %}
-    
-</body>
-</html>
+  
+{% endblock content %}
