--- a/bboard/templates/bboard/index.html
+++ b/bboard/templates/bboard/index.html
@@ -1,20 +1,6 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home - Bulletin Board</title>
-</head>
-<body>
+{% extends "layout/basic.html" %}
 
-    <h1>Ads</h1>
-    <div>
-        <a href="{% url 'index' %}">Home</a>
-        <a href="{% url 'add' %}">Create Ad</a>
-        {% for rubric in rubrics %}
-        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
-        {% endfor %}
-    </div>
+{% block content %}
     {% for ad in ads %}
     <div>
         <h2>{{ ad.title }}</h2>
@@ -23,6 +9,4 @@
         <p>{{ ad.published|date:"d.m.Y H:i:s" }}</p>
     </div>
     {% endfor %}
-    
-</body>
-</html>
+{% endblock content %}
